using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationStaticStrings
{
    public static string isMoving = "isMoving";
    public static string isGrounded = "isGrounded";
    public static string moveY = "moveY";
    public static string shooting = "shooting";
    public static string death = "death";

}
